<resources>
    <string name="app_name">Slisp App</string>
    <string name="a">A</string>
    <string name="todo">TODO</string>
    <string name="label">Label</string>
    <string name="number">Number</string>
    <string name="sign_up">SIGN UP</string>
    <string name="about">ABOUT</string>
    <string name="login">LOGIN</string>
    <string name="healthcare">HealthCare</string>
    <string name="basics">Basics</string>
    <string name="greetings">Greetings</string>
    <string name="family">Family</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="school">School</string>
    <string name="login3">Login</string>
    <string name="login_in_here">Login In Here</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_for_an_account">Sign Up For An Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email address</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="login_here">Login Here</string>
    <string name="userIcon">TODO</string>
    <string name="home_instructions">Home Instructions</string>
    <string name="home_activities">Home Activities</string>
    <string name="basic_words">Basic Words</string>
    <string name="learn_alphabets">Learn Alphabets</string>
    <string name="family_members">Family Members</string>
    <string name="numbers_0_to_10">Numbers 0 To 10</string>
    <string name="numbers_1_to_10">Numbers 1 To 10</string>
    <string name="school_elements">School Elements</string>
    <string name="greetings_words">Greetings Words</string>
    <string name="hospital_words">Hospital Words</string>
    <string name="food_related">Food Related</string>
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>
    <string name="pref_chat_status">com.example.preference_chat</string>
    <string name="new_user_register_now">New user? Register now</string>
    <string name="title_activity_administrator">Administrator</string>
    <string name="add_sign2">add_sign2</string>
    <string name="sign2">sign2</string>
    <string name="title_activity_local_user">LocalUser</string>
    <string name="sign">sign</string>
    <string name="add_sign">add_sign</string>
    <string name="about2">About</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_user">User</string>
    <string name="add_sign3">Add Sign</string>
    <string name="logout">Logout</string>
    <string name="about3">About</string>
    <string name="add_sign4">Add Sign</string>
    <string name="add_a_sign">Add A Sign</string>
    <string name="luganda_name">Luganda Name</string>
    <string name="english_name">English Name</string>
    <string name="sign_description">Sign Description</string>
    <string name="groupmessage">GroupMessage</string>
    <string name="sendbutton">SendButton</string>
    <string name="usermessagebox">UserMessageBox</string>
    <string name="write_a_message">Write a message</string>
    <string name="choose_sign">Choose Sign</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="chat">Chat</string>
    <string name="add_sign5">Add sign</string>
    <string name="verify_sign">Verify Sign</string>
    <string name="delete_sign">Delete Sign</string>
    <string name="home_activities2">home_activities2</string>
    <string name="basics2">Basics2</string>
    <string name="health">health</string>
    <string name="greetings2">Greetings2</string>
    <string name="food2">Food2</string>
    <string name="school3">School3</string>
    <string name="AboutSLISP">Sign Language and Information Sharing Platform (SLISP)</string>
    <string name="Developers">This application was developed a group of final year student offering BIS at Makerere University.</string>
    <string name="yiga_enyukuta">Yiga Enyukuta</string>
    <string name="ebisokelwako">Ebisokelwako</string>
    <string name="emikwano_n_amaka">Emikwano N\'amaka</string>
    <string name="ebikwata_kumeere">Ebikwata Kumeere</string>
    <string name="ebyenamusa">Ebyenamusa</string>
    <string name="eby_obulamu">Eby\'obulamu</string>
    <string name="ebikolwa_by_ewaka">Ebikolwa By\'ewaka</string>
    <string name="emiwendo">Emiwendo</string>
    <string name="eby_okusomero">Eby\'okusomero</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_users">Manage Users</string>
    <string name="manage_signs">Manage Signs</string>
    <string name="chat2">Chat</string>
    <string name="title_activity_administrator2">Administrator Dashboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_manage_users">Manage Users</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_user">Edit User</string>
    <string name="add_user">Add User</string>
    <string name="manageuserdashboard">Admin: Manage User Dashboard</string>
    <string name="logout3">Logout2</string>
    <string name="logout4">Logout</string>
    <string name="home4">Home</string>
    <string name="manage_users2">Manage Users</string>
    <string name="view_users">View Users</string>
    <string name="add_new_sign">Add New Sign</string>
    <string name="add_new_administrator">Add New Administrator</string>
    <string name="submit">Submit Details</string>
    <string name="databaseicon">databaseicon</string>
    <string name="add_a_new_sign">Add A New Sign</string>
    <string name="verify_newly_added_signs">Verify Newly Added Signs</string>
    <string name="delete_accessible_sign_from_slisp">Delete Accessible Sign From SLISP</string>
    <string name="all_slisp_users">All SLISP Users</string>
    <string name="searchsign">Searchsign</string>
    <string name="type_a_word_wandiika_ekigambo">Type a word(Wandiika Ekigambo)</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="_10_20">10:20</string>
    <string name="description" />
    <string name="description2">Description</string>
    <string name="title" />
    <string name="add">Add</string>
    <string name="write_comment">Write Comment</string>
    <string name="detail">detail</string>
    <string name="post_title">post title</string>
    <string name="comment">Comment</string>
    <string name="post">TODO</string>
    <string name="commentDetail">TODO</string>
    <string name="numbers">Numbers</string>


</resources>
