<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E7F9EA">

    <TextView
        android:id="@+id/label"
        android:layout_width="159dp"
        android:layout_height="113dp"
        android:layout_below="@id/sign"
        android:layout_alignTop="@id/sign"
        android:layout_alignBottom="@+id/sign"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-56dp"
        android:gravity="center"
        android:paddingTop="70dp"
        android:text="@string/number"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/number2"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/familyImage"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="-38dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:paddingTop="0dp"
        android:text="@string/numbers"
        android:textSize="15sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="50sp"
        android:contentDescription="@string/todo"
        android:maxHeight="150dp"
        tools:srcCompat="@tools:sample/avatars" />


</RelativeLayout>
