<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E7F9EA">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="246dp">

        <TextView
            android:id="@+id/home"
            android:layout_width="429dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/homeImage"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:paddingTop="150dp"
            android:text="@string/home_activities"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home2"
            android:layout_width="373dp"
            android:layout_height="48dp"
            android:layout_below="@+id/homeImage"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="-38dp"
            android:layout_marginTop="-17dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="-107dp"
            android:gravity="center"
            android:paddingTop="0dp"
            android:text="@string/home_activities2"
            android:textSize="15sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/homeImage"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="43dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="50sp"
            android:layout_marginRight="50sp"
            android:layout_marginBottom="50sp"
            android:contentDescription="@string/todo"
            android:maxHeight="150dp"
            tools:srcCompat="@tools:sample/avatars" />
    </RelativeLayout>



</RelativeLayout>
